Add reliability analysis. Fixes some UIs.

--- a/salam/salam-rest/src/main/resources/webui/index.html
+++ b/salam/salam-rest/src/main/resources/webui/index.html
@@ -21,9 +21,9 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="HeaderController">
       		<ul class="nav navbar-nav">
-        		<li ng-class="{active: isActive('/peer')}"><a href="#/peer">Peers</a></li>
+        		<li ng-class="{active: isActive('/peer')}"><a href="#/peer">Units</a></li>
         		<li ng-class="{active: isActive('/task')}"><a href="#/task">Tasks</a></li>
-        		<li ng-class="{active: isActive('/collective')}"><a href="#/collective">Collectives</a></li>
+        		<li ng-class="{active: isActive('/collective')}"><a href="#/collective">SCUs</a></li>
         		<li ng-class="{active: isActive('/task-rule')}"><a href="#/task-rule">Task Generator Rules</a></li>
         	</ul>
        	</div>
