--- a/hcu/hcu-rest/src/main/resources/webui/index.html
+++ b/hcu/hcu-rest/src/main/resources/webui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="hcuapp">
+<html ng-app="hcuapp" xmlns: xmlns: xmlns:>
 <head>
     <title>RAHYMS</title>
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/simulation.css">
-
 </head>
 <body>
 <div class="navbar navbar-default">
@@ -22,14 +21,28 @@
             <a class="navbar-brand" href="/">RAHYMS</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="HeaderController">
-      		<ul class="nav navbar-nav">
+            <ul class="nav navbar-nav">
+                <li ng-class="{active: interactiveMode}"><a ng-click="interactive()">Interactive-Mode</a></li>
+                <li ng-class="{active: simulationMode}"><a ng-click="simulation()">Simulation-Mode</a></li>
+            </ul>
+            <br/>
+            <br/>
+            <br/>
+
+      		<ul ng-hide="!interactiveMode" class="nav navbar-nav">
         		<li ng-class="{active: isActive('/peer')}"><a href="#/peer">Units</a></li>
         		<li ng-class="{active: isActive('/task')}"><a href="#/task">Tasks</a></li>
         		<li ng-class="{active: isActive('/collective')}"><a href="#/collective">HCUs</a></li>
         		<li ng-class="{active: isActive('/task-rule')}"><a href="#/task-rule">Task Generator Rules</a></li>
-                <li ng-class="{active: isActive('/simulation')}"><a href="#/simulation">Simulation</a></li>
-
             </ul>
+
+            <ul ng-hide="!simulationMode" class="nav navbar-nav" >
+                <li ng-class="{active: isActive('/simulation-unit')}"><a href="#/simulation-unit">UnitGenerator</a></li>
+                <li ng-class="{active: isActive('/simulation-task')}"><a href="#/simulation-task">TaskGenerator</a></li>
+                <li ng-class="{active: isActive('/simulation')}"><a href="#/simulation">Simulation</a></li>
+                <li ng-class="{active: isActive('/simulation-analytics')}"><a href="#/simulation-analytics">Analytics</a></li>
+            </ul>
+
        	</div>
     </div>
 </div>
@@ -49,6 +62,8 @@
 <script src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
 <script src="js/dialogs-default-translations.min.js"></script>
 <script src="js/dialogs.min.js"></script>
+<script src="js/angular-dragdrop.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
 
 <script src="scripts/app.js"></script>
 <script src="scripts/util.js"></script>
@@ -57,12 +72,20 @@
 <script src="scripts/collective.js"></script>
 <script src="scripts/taskRule.js"></script>
 <script src="scripts/assignment.js"></script>
-<script src="scripts/simulation.js"></script>
-
+<script src="scripts/simulation/simulation-task.js"></script>
+<script src="scripts/simulation/simulation-task-detail.js"></script>
+<script src="scripts/simulation/simulation-analytics.js"></script>
+<script src="scripts/simulation/simulation.js"></script>
+<script src="scripts/simulation/simulation-unit.js"></script>
+<script src="scripts/simulation/simulation-unit-detail.js"></script>
+<!-- todo brk internet olmadan proje zaten calismamasi lazim, database olayini netten alacagiz cünkü -->
+<!-- todo brk eger internet yoksa alttaki calismiyor ve hicbir modal acilamiyor. native e almaya calis. veyahut library-->
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
         integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
         crossorigin="anonymous"></script>
+
+<!-- todo brk mlab ile alakali mevzulari hem projeye ekle hem de teze -->
 
 </body>
 </html>
