--- a/hcu/hcu-rest/src/main/resources/webui/index.html
+++ b/hcu/hcu-rest/src/main/resources/webui/index.html
@@ -86,6 +86,9 @@
         integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
         crossorigin="anonymous"></script>
 
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3-queue.v3.min.js"></script>
+
 <script>
     $(document).ready(function(){
         $(window).scroll(function () {
